# Claude-Code-Multi-Agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  ccm  install-ccm.sh
.claude/: hooks-config.json  settings.local.json
.claude/commands/gh/: fix-issue.md  review-pr.md
PRPs/templates/: prp_base.md
config/: profiles.json
docs/: HOOKS.md  INSTALLATION.md  MCP_TOOLS.md  SKILLS.md  TROUBLESHOOTING.md
project_document/: .operation_hashes.json  CHANGELOG.md  DEVELOPMENT.md  KNOWLEDGE.md
tools/claude-config-manager/: README.md  pyproject.toml
tools/claude-config-manager/src/claude_config_manager/: __init__.py  cli.py  profiles.json
tools/claude-config-manager/src/claude_config_manager/core/: __init__.py  config_manager.py  git_sync.py  models.py  profile_manager.py  validator.py
tools/claude-config-manager/src/claude_config_manager/ui/: __init__.py  app.py
tools/claude-config-manager/src/claude_config_manager/ui/screens/: __init__.py
tools/claude-config-manager/src/claude_config_manager/ui/widgets/: __init__.py
