[project]
name = "claude-config-manager"
version = "1.0.0"
description = "TUI tool for managing Claude Code project configurations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Claude Code Team" }]
keywords = ["claude", "mcp", "config", "tui"]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ccm = "claude_config_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_config_manager"]
